# CACTUS

./: .gitignore  README.md  client.py  pyproject.toml  server.py  todo.md
src/classes/: client_gui.py  data_handler.py
src/logger/: __init__.py  logger.py  logger_settings.py
src/references/: example_message.json  status_codes.csv
src/utils/: chat_utils.py  dev_client_defaults.py  example_message.json  socket_util.py  tk_util.py  words_util.py
tests/: TESTS_README.md  run_tests.py
tests/src/classes/: test_client_gui.py
tests/src/logger/: test_logger.py  test_logger_settings.py
tests/src/utils/: test_socket_util.py  test_words_util.py
